--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "add-domain": "echo waqarkalim.com > dist/CNAME",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "pnpm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run add-domain && gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
