Adding CNAME at the end of the pre-deploy step rather than start of the deploy step

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "add-domain": "echo waqarkalim.com > dist/CNAME",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "pnpm run build",
-    "deploy": "pnpm run add-domain && gh-pages -d dist"
+    "predeploy": "pnpm run build && pnpm run add-domain",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
